# used-car-price-prediction

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.mlflow  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-api.txt  requirements-ui.txt  requirements.txt
.github/workflows/: main.yml
app/: Dockerfile.api  main.py  middleware.py  requirements.txt
app/auth/: helper.py  jwt.py  limiter.py  models.py  my_jwt.py  router.py
conf/: config.yaml
conf/data/: preprocessing.yaml
conf/model/: modeling.yaml
conf/training/: train.yaml
conf/tuning/: hyperparameter_tuning.yaml
database/: dbmaker.py
notebooks/: experiments copy.ipynb  experiments.ipynb  experiments_legacy.ipynb  final-used-car-price.ipynb  ml_exp.ipynb  torch_neural_net.ipynb
scripts/: clean_dataset.py  dbmaker.py  hyperparam_tuning.py  import_cars_data.py
tests/: load_model.py  task.py  test_foo.py  test_limiter.py
used_car_price_prediction/pipeline/: evaluate.py  main.py  preprocess.py  train.py
used_car_price_prediction/ui/: auth.py  main.py
used_car_price_prediction/ui/components/: footer.py  sidebar.py
used_car_price_prediction/ui/page_modules/: about.py  analysis.py  home.py  prediction.py
used_car_price_prediction/ui/utils/: api.py  data_loader.py  limiter.py
utils/: api_helper.py  api_key.py  decorators.py  preprocessing.py
